sandbox/output
MedicineClashTest.java:34: error: cannot find symbol
        assertEquals(expectedClashedSet, MedicineClash.Of(customers));
                                         ^
  symbol:   variable MedicineClash
  location: class MedicineClashTest
1 error
